force-app/main/default/objects/Eligible_Asset__c/Eligible_Asset__c.object-meta.xml
<CustomObject>
    <label>Eligible Asset</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligible Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>