force-app/main/default/objects/Eligible_Asset__c/fields/Points_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Points_Per_Unit__c</fullName>
    <label>Points Per Unit</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>